--- a/components/category.html
+++ b/components/category.html
@@ -17,8 +17,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul>
-                <li><p><i class="fas fa-home"></i> Home</p></li>
-                <li><p><i class="far fa-user"></i>Profile</p></li>
+                <li><a href="../index.html"><p><i class="fas fa-home"></i> Home</p></a></li>
+                <li><a href="./profile.html"><p><i class="far fa-user"></i>Profile</p></a></li>
             </ul>
         </div>
     </nav>      
@@ -38,7 +38,10 @@
                 <h2>React JS</h2>
                 <p>React is a JavaScript library for building user interfaces.
                      Test your knowledge with this basic React quiz made especially for beginners.</p>
-                <h5>Play now <i class="fa-solid fa-arrow-right"></i></h5>
+                <div class="category__button">
+                    <a href="./rules.html"><h5>Play now <i class="fa-solid fa-arrow-right"></i></h5></a>
+                    <a href="./scoreboard.html"><h5>Score board <i class="fa-solid fa-medal"></i></h5></a>
+                </div>
             </div>
         </div>
         <div class="category__two">
@@ -49,8 +52,11 @@
                 <h2>Node JS</h2>
                 <p>Node.js is an open source server environment. it allows you to run JS on the server.
                      Test your knowledge with this basic React quiz made especially for beginners.</p>
-                <h5>Play now <i class="fa-solid fa-arrow-right"></i></h5>
-            </div>
+                <div class="category__button">
+                    <a href="./rules.html"><h5>Play now <i class="fa-solid fa-arrow-right"></i></h5></a>
+                    <a href="./scoreboard.html"><h5>Score board <i class="fa-solid fa-medal"></i></h5></a>
+                </div>
+                </div>
             <div class="category__card">
                 <div class="category__image">
                     <img src="images/jsquizz.png" alt="category-image" />
@@ -58,7 +64,10 @@
                 <h2>Javascript</h2>
                 <p>JavaScript is a high-level, often just-in-time compiled language.
                      Test your knowledge with this basic React quiz made especially for beginners.</p>
-                <h5>Play now <i class="fa-solid fa-arrow-right"></i></h5>
+                <div class="category__button">
+                    <a href="./rules.html"><h5>Play now <i class="fa-solid fa-arrow-right"></i></h5></a>
+                    <a href="./scoreboard.html"><h5>Score board <i class="fa-solid fa-medal"></i></h5></a>
+                </div>
             </div>
         </div>
         <div class="category__three">
@@ -69,7 +78,10 @@
                 <h2>Angular JS</h2>
                 <p>Angular is a JavaScript framework for building user interfaces.
                      Test your knowledge with this basic Angular quiz made especially for beginners.</p>
-                <h5>Play now <i class="fa-solid fa-arrow-right"></i></h5>
+                <div class="category__button">
+                    <a href="./rules.html"><h5>Play now <i class="fa-solid fa-arrow-right"></i></h5></a>
+                    <a href="./scoreboard.html"><h5>Score board <i class="fa-solid fa-medal"></i></h5></a>
+                </div>
             </div>
         </div>
     </div>
