--- a/components/result.html
+++ b/components/result.html
@@ -17,8 +17,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul>
-                <li><p><i class="fas fa-home"></i> Home</p></li>
-                <li><p><i class="far fa-user"></i>Profile</p></li>
+                <li><a href="../index.html"><p><i class="fas fa-home"></i> Home</p></a></li>
+                <li><a href="./profile.html"><p><i class="far fa-user"></i>Profile</p></a></li>
             </ul>
         </div>
     </nav>      
@@ -34,28 +34,28 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>Original DOM</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>Virtual DOM</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>Both A and B</span>
                 </li>
                 <li class="wrong__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>None of the above</span>
@@ -69,28 +69,28 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>npm serve</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>npm build</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>npm start</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>npm run dev</span>
@@ -104,28 +104,28 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>5000</span>
                 </li>
                 <li class="wrong__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>3500</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>8080</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>3000</span>
@@ -138,14 +138,14 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>True</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>False</span>
@@ -158,28 +158,28 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>let</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>const</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>var</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>constant</span>
@@ -192,28 +192,28 @@
             <ul class="stacked-list">
                 <li class="wrong__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>Shadow DOM</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>DOM</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>Virtual DOM</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>React DOM</span>
@@ -226,28 +226,28 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>React Router</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>Babel</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>JSX Compiler</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>ReactDOM</span>
@@ -260,14 +260,14 @@
             <ul class="stacked-list">
                 <li class="wrong__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>True</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>False</span>
@@ -280,28 +280,28 @@
             <ul class="stacked-list">
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>::</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>??</span>
                 </li>
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>C</span>
                     </label>
                     <span>&&</span>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>D</span>
                     </label>
                     <span>||</span>
@@ -314,14 +314,14 @@
             <ul class="stacked-list">
                 <li class="correct__answer">
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>A</span>
                     </label>
                     <span>True</span>
                 </li>
                 <li >
                     <label>
-                        <input type="radio" name="options"/>
+                        <input type="radio" name="options" disabled/>
                         <span>B</span>
                     </label>
                     <span>False</span>
