--- a/components/login.html
+++ b/components/login.html
@@ -17,8 +17,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul>
-                <li><p><i class="fas fa-home"></i> Home</p></li>
-                <li><p><i class="far fa-user"></i>Profile</p></li>
+                <li><a href="../index.html"><p><i class="fas fa-home"></i> Home</p></a></li>
+                <li><a href="../components/profile.html"><p><i class="far fa-user"></i>Profile</p></a></li>
             </ul>
         </div>
     </nav>      
