--- a/components/questions.html
+++ b/components/questions.html
@@ -17,8 +17,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul>
-                <li><p><i class="fas fa-home"></i> Home</p></li>
-                <li><p><i class="far fa-user"></i>Profile</p></li>
+                <li><a href="../index.html"><p><i class="fas fa-home"></i> Home</p></a></li>
+                <li><a href="./profile.html"><p><i class="far fa-user"></i>Profile</p></a></li>
             </ul>
         </div>
     </nav>      
@@ -64,11 +64,11 @@
         </div>
         <div class="question__button">
             <button class="question-button"><i class="fa-solid fa-arrow-left-long"></i> Previous</button>
-            <button class="question-button">Next <i class="fa-solid fa-arrow-right-long"></i></button>
+            <a href="./result.html"><button class="question-button">Next <i class="fa-solid fa-arrow-right-long"></i></button></a>
         </div>
         <div class="question__button-small">
             <button class="question-button"><i class="fa-solid fa-arrow-left-long"></i></button>
-            <button class="question-button"><i class="fa-solid fa-arrow-right-long"></i></button>
+            <a href="./result.html"><button class="question-button"><i class="fa-solid fa-arrow-right-long"></i></button></a>
         </div>                                                                                                          
     </div>
 
