--- a/components/rules.html
+++ b/components/rules.html
@@ -17,8 +17,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul>
-                <li><p><i class="fas fa-home"></i> Home</p></li>
-                <li><p><i class="far fa-user"></i>Profile</p></li>
+                <li><a href="../index.html"><p><i class="fas fa-home"></i> Home</p></a></li>
+                <li><a href="./profile.html"><p><i class="far fa-user"></i>Profile</p></a></li>
             </ul>
         </div>
     </nav>      
@@ -35,7 +35,7 @@
             <li><p><i class="fa-solid fa-graduation-cap"></i> You will get 60 seconds to answer the One question.</p></li>
             <li><p><i class="fa-solid fa-graduation-cap"></i> There is no negative marking for wrong answer.</p></li>
         </ul>
-        <button class="rule-button">Start the quizz <i class="fa-solid fa-arrow-right-long"></i></button>
+        <a href="./questions.html"><button class="rule-button">Start the quizz <i class="fa-solid fa-arrow-right-long"></i></button></a>
                                                                                                                                
     </div>
 
