--- a/index.css
+++ b/index.css
@@ -45,6 +45,10 @@ body {
     cursor: pointer;
 }
 
+a{
+  text-decoration: none;
+}
+
 .nav-bar button i{
     padding-right: 0.2rem;
     color: var(--background-color);
