--- a/components/profile.html
+++ b/components/profile.html
@@ -45,10 +45,10 @@
                 <p>Lomesh Badhe</p>
 
                 <h4>Email : </h4>
-                <p>badhelomesh2510@gmail.com</p>
+                <p>badhelomesh@gmail.com</p>
                 
                 <h4>Mobile No : </h4>
-                <p>+91 9833223117</p>
+                <p>+91 9933227766</p>
 
                 <h4>Profession : </h4>
                 <p>Full stack developer</p>
